# shutterbase

./: .dockerignore  .gitignore  .gitmodules  .sops.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  PRODUCT.md  README.md  REWRITE-SPEC.md  TODO.md  credentials.secret.enc.yml  justfile  nx.json  package-lock.json  package.json  sandbox.js  shutterbase.code-workspace  workspace.json
.github/workflows/: build-api.yml  build-ui.yml  build-wasm-builder.yml  build.yml  ui-e2e.yml
api/: .env  .gitignore  Dockerfile  go.mod  go.sum  justfile
api/ent/: apikey.go  apikey_create.go  apikey_delete.go  apikey_query.go  apikey_update.go  auditlog.go  auditlog_create.go  auditlog_delete.go  auditlog_query.go  auditlog_update.go  batch_delete.go  batch_query.go  camera.go  camera_create.go  camera_delete.go  camera_query.go  camera_update.go  client.go  ent.go  generate.go  image.go  image_create.go  image_delete.go  image_query.go  image_update.go  imagetag.go  imagetag_create.go  imagetag_delete.go  imagetag_query.go  imagetag_update.go  imagetagassignment.go  imagetagassignment_create.go  imagetagassignment_delete.go  imagetagassignment_query.go  imagetagassignment_update.go  mutation.go  project.go  project_create.go  project_delete.go  (+29 more)
api_v1/: go.sum
hack/: generate-types.sh  postgres-init-script.sql  redis.conf  start-minio.sh  start-postgres.sh  start-redis.sh  update-sops-secrets.sh
image-wasm/: .gitignore  Cargo.toml  index.html
image-wasm/hack/: build.sh
image-wasm/src/: callback.rs  error.rs  exif_meta.rs  filename.rs  image.rs  imaging.rs  lib.rs  log.rs  qr.rs  qr_code_util.rs  time_offset.rs  upload.rs  util.rs
image-wasm/src/api/: upload.rs
image-wasm/src/image/: metadata.rs  resizing.rs  util.rs
image-wasm/src/qr_code_util/: generator.rs  reader.rs
image-wasm/src/util/: callback_util.rs  filename.rs  js.rs  logger.rs  time_offset.rs
ui/: .dependency-cruiser.cjs  .gitignore  DESIGN.md  README.md  bun.lockb  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  postcss.config.cjs  quasar.config.js  quasar.config.ts  tailwind.config.js  tsconfig.json  vitest.config.ts
ui_v1/: package.json  pnpm-lock.yaml
wasm/: Cargo copy.toml  Cargo.toml  README.md
wasm/src/: _lib.rs__  image_util.rs  lib.rs
wasm/src/image_util/: resizing.rs
web/: Dockerfile  app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js
web_v1/: .dockerignore  Dockerfile  app.vue  nuxt.config.ts
(+607 files in other folders)
