[package]
name = "image-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4"

wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4.42"

serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0"

js-sys = "0.3.69"

kamadak-exif = "0.5.5"
image = "0.24.9"
fast_image_resize = "3.0.4"
bardecoder = "0.5.0"

uuid = { version = "1.7.0", features = ["v4"] }
getrandom = { version = "0.2", features = ["js"] }

qrcode-generator = "4.1.9"

base64 = "0.22.0"

regex = "1.10.4"

[dependencies.web-sys]
version = "0.3.69"
features = [
  'Blob',
  'XmlHttpRequest',
  'XmlHttpRequestUpload',
  'ProgressEvent',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]