[package]
name = "image-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"

serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

chrono = "0.4"
image = "0.25"
kamadak-exif = "0.5"
rqrr = { version = "0.10", default-features = false }
qrcode-generator = "4"
uuid = { version = "1", features = ["v4", "js"] }
getrandom = { version = "0.2", features = ["js"] }
base64 = "0.22"
regex = "1"
thiserror = "2"

[dependencies.web-sys]
version = "0.3"
features = [
  "Blob",
  "XmlHttpRequest",
  "XmlHttpRequestUpload",
  "ProgressEvent",
  "Request",
  "RequestCredentials",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "console",
]
