[package]
name = "test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4.42"

serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0"

js-sys = "0.3.69"

kamadak-exif = "0.5.5"
image = "0.25.0"
fast_image_resize = "3.0.4"

uuid = { version = "1.7.0", features = ["v4"] }
getrandom = { version = "0.2", features = ["js"] }

base64 = "0.22.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Blob',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]